<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TGSample</string>
    <string name="Welcome_word">Hello, Welcome back!  :</string>
    <string name="action_settings">Settings</string>
    <string name="text_user">User Name</string>
    <string name="edit_user">Enter your username</string>
    <string name="text_pass">Password</string>
    <string name="edit_pass">Enter your password</string>
    <string name="button_feedlist">Latest Feeds</string>
    <string name="button_web_weather">weather</string>
    <string name="button_web_travel">travel</string>
    <string name="main_title">Front Window</string>
    <string name="pref_name_title">Enter your name</string>
    <string name="pref_viewimage_title">View Images</string>
    <string name="pref_usersetting_title">User Settings</string>
    <string name="button_testservice">Test Service</string>
    <string name="flower_name_placeholder">flower name</string>
    <string name="label_latest_news">Latest News</string>
    <string name="action_doTask">Refresh</string>
    <string name="splash_placeholder">splash_placeholder</string>
    <string name="send_uni_chat">send chat message</string>
    <string name="send_uni_chat_hint">sending conversation with one message</string>
    <string name="send_duo_chats">Send 2 chats message</string>
    <string name="send_duo_chats_hint">sending two chats in one message</string>
    <string name="send_rush_chat">Send chat with 3 messages</string>
    <string name="send_rush_chat_hint">sending one conversation with three messages</string>
    <string name="clear_log">Clear LOG</string>
    <string name="label_notify_service">notify service</string>
    <string name="notification_reply">Reply by voice</string>

</resources>
